--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
         BASE_IMAGE: pytorch/pytorch:2.9.1-cuda13.0-cudnn9-runtime
     image: sisr:latest
     working_dir: /app
-    command: python -u docker/train.py --config docker/train.yaml
+    command: ["./docker/train_rcan.sh"]
     environment:
       - PYTHONUNBUFFERED=1
     volumes:
