--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,11 @@ services:
         BASE_IMAGE: pytorch/pytorch:2.9.1-cuda13.0-cudnn9-runtime
     image: sisr:latest
     working_dir: /app
-    command: ["./docker/train_rcan.sh"]
+    command: ["./docker/eval.sh"]
     environment:
       - PYTHONUNBUFFERED=1
+    tty: true
+    stdin_open: true
     volumes:
       - ./:/app:rw
       - ./data:/app/data:ro # Read only dataset
